clubbed-svc-enquiry-handler-2: Migrate to Axon
Move e-mail notifications out of this service. clubbed-svc-email-notifier responds to changes to the domain model to generate the appropriate notifications.